# personal-jarvis

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.py
agents/: _stubs.py
api/: server.py
cli/: main.py
engine/: _stubs.py
jarvis/: sdk.py
jarvis/agents/: __init__.py  base.py  orchestrator.py  react.py  simple.py
jarvis/engines/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
jarvis/tools/: __init__.py  base.py  calculator.py  file_read.py  web_search.py
src/jarvis/: __init__.py  sdk.py
tests/: test_sdk.py
tools/: _stubs.py
