[tool.poetry]
name = "personal-jarvis"
version = "0.1.0"
description = "A personal assistant powered by FastAPI and Ollama."
license = "MIT"
authors = ["Lion Joswig <lionjoswig-byte@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.0"
ollama = "^1.0.0"

[tool.poetry.dev-dependencies]
test = "^0.1.0"
mypy = "^0.910"
pylint = "^2.12.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"